--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@picocss/pico": "^1.5.10"
+	}
 }
